--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
     volumes:
       - ./imgs:/app/imgs
       - ./files:/app/files
+    environment:
+      - PYTHONUNBUFFERED=1
     networks:
       - imgur_net
     ports:
@@ -29,6 +31,13 @@ services:
       - imgur_net
     depends_on: 
       - "analyser"
+    command:
+      - /bin/sh
+      - -c
+      - |
+          echo "sleep for 60sec"
+          sleep 60 
+          ./main
 
 networks:
   imgur_net:
