API url now detected with environment variable

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,8 @@ services:
       - imgur_net
     depends_on: 
       - "analyser"
+    environment:
+      - API_SERVICE_NAME=analyser
 
 networks:
   imgur_net:
